Added Passport & Drivers License Verification to Merchant API
